chore: add a 'default' system